[package]
name = "rdocker"
version = "0.4.1"
edition = "2021"
license = "MIT"
description = "A api lib for docker in rust"
keywords = ["easy", "use", "docker", "api"]
homepage = "https://github.com/fb0sh/rdocker"
repository = "https://github.com/fb0sh/rdocker"
documentation = "https://github.com/fb0sh/rdocker"
readme = "README.md"
authors = ["fb0sh@outlook.com"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
